删除vpn之前提交